# mre3-ear-lab-ws2024

./: .gitignore  README.md
robot/: readme.md  run_in_dirs.py
robot/gruppe_1/src/initialisation/: CMakeLists.txt  package.xml
robot/gruppe_1/src/localization/: CMakeLists.txt  package.xml
robot/gruppe_1/src/move_base/: CMakeLists.txt  package.xml
robot/gruppe_2/: readme.md
robot/gruppe_2/docker/: Dockerfile.interface
robot/hw_bringup/: Dockerfile.tracker_launch  docker-compose.yaml
robot/hw_bringup/src/: .gitignore
robot/hw_bringup/src/fhtw_launch/: CMakeLists.txt  package.xml
robot/hw_bringup/src/fhtw_launch/launch/: full_cbrn_message_reporter.launch  offline_cbrn_message_reporter.launch  sensors.launch  tau_bringup.launch
robot/hw_bringup/src/fhtw_launch/scripts/: Readme.md  automatic_map_csv_saver.py  del_csv.sh  licht_intern.py  save_all_maps.sh  save_cartographer.sh  xbox_teleop.sh
robot/hw_bringup/src/fhtw_launch/scripts/draw_map/src/: CMakeLists.txt  draw_map_radiological.cpp  draw_map_radiological_uSv_h.cpp  draw_map_symbols.cpp  draw_radiological.cpp  draw_radiological.h  draw_sign.cpp  draw_sign.hpp  gauss.h  header.cpp  header.h  read_csv.cpp  read_csv.h  sign.h
robot/hw_bringup/src/fhtw_launch/src/: taurob_arm_endeffector_node.py
robot/hw_bringup/src/fhtw_launch/urdf/: laser_front.urdf.xacro  laser_rear.urdf.xacro  sick_tim.urdf.xacro
robot/hw_bringup/src/taurob_moveit_sieglinde/: .setup_assistant  CMakeLists.txt  package.xml
robot/hw_bringup/src/taurob_moveit_sieglinde/config/: fake_controllers.yaml  gazebo_taurob_tracker.urdf  joint_limits.yaml  joint_withoutlimits_backup.yaml  ompl_planning.yaml  ros_controllers.yaml  ros_controllers_backup.yaml  simple_moveit_controllers.yaml  taurob_tracker.srdf
robot/hw_bringup/src/taurob_moveit_sieglinde/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
robot/navigation/: Dockerfile.move_base_flex  Dockerfile.semi_autonomy  docker-compose.yaml  readme.md
robot/navigation/src/move_base_flex/: move_base_flex.launch
robot/navigation/src/move_base_flex/param/: base_local_planner.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
robot/navigation/src/semi_autonomy/: genericMux.py  muxConfig.json  preempt_goal.py  readme.md
