<?xml version="1.0"?>
<package format="2">
  <name>fhtw_launch</name>
  <version>0.0.0</version>
  <description>The fhtw_launch package</description>

  <maintainer email="georg.novotny@technikum-wien.at">Georg Novotny</maintainer>
  <author email="georg.novotny@technikum-wien.at">Georg Novotny</author>

  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
